--- a/package.json
+++ b/package.json
@@ -8,9 +8,12 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.21.1",
     "core-js": "^3.6.5",
-    "vue": "^3.0.0",
+    "normalize.css": "^8.0.1",
+    "vue": "^3.1.5",
     "vue-router": "^4.0.0-0",
+    "vue-template-compiler": "^2.6.14",
     "vuex": "^4.0.0-0"
   },
   "devDependencies": {
